--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,14 +1,14 @@
 model_year: 2022
 unsupported_commands_by_ecu:
   6F1:
-  - 6F1.607.22E5C7
-  - 6F1.607.22E5CE
-  - 6F1.60D.22D240
-  - 6F1.612.224AB1
-  - 6F1.612.22586F
-  - 6F1.618.22DA12
-  - 6F1.618.22DA25
-  - 6F1.618.22DA2E
-  - 6F1.618.22DA37
-  - 6F1.660.22420C
-  - 6F1.663.22D031
+  - 6F1.607.22E5C7|e=07,fc=1:MINI_HVBAT_SOH_V2
+  - 6F1.607.22E5CE|e=07,fc=1:MINI_HVBAT_SOC_V2
+  - 6F1.60D.22D240|e=0D,fc=1:MINI_VSS_INSTR
+  - 6F1.612.224AB1|e=12,fc=1:MINI_VSS2
+  - 6F1.612.22586F|e=12,fc=1:MINI_EOP
+  - 6F1.618.22DA12|e=18,fc=1:MINI_ATF_TEMP
+  - 6F1.618.22DA25|e=18,fc=1:MINI_EOT
+  - 6F1.618.22DA2E|e=18,fc=1:MINI_GEAR,MINI_GEAR_SHIFT
+  - 6F1.618.22DA37|e=18,fc=1:MINI_TIME_D,MINI_TIME_M,MINI_TIME_S
+  - 6F1.660.22420C|e=60,fc=1:MINI_RANGE,MINI_RANGE_COMF,MINI_RANGE_ECO
+  - 6F1.663.22D031|e=63,fc=1:MINI_GEAR_V2
