--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,4 +1,20 @@
 model_year: 2022
+supported_commands_by_ecu:
+  6F1:
+  - 6F1.607.226335|e=07,fc=1:MINI_HVBAT_SOH
+  - 6F1.607.22DD68|e=07,fc=1:MINI_HVBAT_VOLT
+  - 6F1.607.22DD69|e=07,fc=1:MINI_HVBAT_C,MINI_HVBAT_CURR
+  - 6F1.607.22DDBC|e=07,fc=1:MINI_HVBAT_SOC,MINI_HVBAT_SOC_MAX,MINI_HVBAT_SOC_MIN
+  - 6F1.607.22DDC0|e=07,fc=1:MINI_HVBAT_CT_MAX,MINI_HVBAT_CT_MIN
+  - 6F1.607.22DF71|e=07,fc=1:MINI_HVBAT_C_CNT,MINI_HVBAT_C_CNT_MOD,MINI_HVBAT_MOD_CNT,MINI_HVBAT_MOD_T_CNT
+  - 6F1.607.22DFA0|e=07,fc=1:MINI_HVBAT_C_CAP_AVG,MINI_HVBAT_C_CAP_MAX,MINI_HVBAT_C_CAP_MIN,MINI_HVBAT_C_OCV_AVG,MINI_HVBAT_C_OCV_MAX,MINI_HVBAT_C_OCV_MIN,MINI_HVBAT_C_RES_FACTOR_AVG,MINI_HVBAT_C_RES_FACTOR_MAX,MINI_HVBAT_C_RES_FACTOR_MIN,MINI_HVBAT_C_SOC_AVG,MINI_HVBAT_C_SOC_MAX,MINI_HVBAT_C_SOC_MIN,MINI_HVBAT_C_TEMP_AVG,MINI_HVBAT_C_TEMP_MAX,MINI_HVBAT_C_TEMP_MIN,MINI_HVBAT_C_V_AVG,MINI_HVBAT_C_V_MAX,MINI_HVBAT_C_V_MIN,MINI_HVBAT_IMPEDANCE_ALPHA
+  - 6F1.61A.22DE00|e=1A,fc=1:MINI_HVBAT_CHG_CON,MINI_HVBAT_CHG_CON_EXT,MINI_HVBAT_CHG_RDY,MINI_HVBAT_HVPM_MIN_SOC,MINI_HVBAT_HVPM_SOC
+  - 6F1.629.22DBE4|e=29,fc=1:MINI_FL_SPD,MINI_FR_SPD,MINI_RL_SPD,MINI_RR_SPD
+  - 6F1.656.22DCDD|e=56,fc=1:MINI_CENTRAL_LOCK,MINI_DOOR_DRIVER,MINI_DOOR_DRIVER_REAR,MINI_DOOR_PASSENGER,MINI_DOOR_PASSENGER_REAR,MINI_HOOD,MINI_REAR_WINDOW,MINI_TRUNK
+  - 6F1.660.22D107|e=60,fc=1:MINI_VSS
+  - 6F1.660.22D10D|e=60,fc=1:MINI_ODO1,MINI_ODO2
+  - 6F1.660.22D111|e=60,fc=1:MINI_AUX_PWR,MINI_RANGE_E_CUR,MINI_RANGE_E_MAX,MINI_RANGE_E_USE,MINI_RANGE_F_CUR,MINI_RANGE_F_MAX
+  - 6F1.660.22D112|e=60,fc=1:MINI_AAT
 unsupported_commands_by_ecu:
   6F1:
   - 6F1.607.22E5C7|e=07,fc=1:MINI_HVBAT_SOH_V2
