Updated command responses

--- a/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -1,6 +1,14 @@
 command_id: 6F1.607.22DDBC|e=07,fc=1
 test_cases:
 - response: |-
+    607F10562DD688E71
+    607F1100962DDBC0212
+    607F12103B80073FFFF
+  expected_values:
+    MINI_HVBAT_SOC: 53
+    MINI_HVBAT_SOC_MAX: 95.2
+    MINI_HVBAT_SOC_MIN: 11.5
+- response: |-
     607F10562DD689460
     607F1100962DDBC02FC
     607F12103AE0073FFFF
