--- a/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -1,6 +1,16 @@
 command_id: 6F1.660.22D10D|e=60,fc=1
 test_cases:
 - response: |-
+    660F10562D1070000
+    660F1100F62D11103C0
+    660F1210596041AFFFF
+    660F12245C00069FFFF
+    660F1100B62D10D0000
+    660F121AA560000AA56
+  expected_values:
+    MINI_ODO1: 43606
+    MINI_ODO2: 43606
+- response: |-
     660F10562D1070375
     660F10562D1126E6E
     660F1100F62D1110064
@@ -83,7 +93,7 @@ test_cases:
     MINI_ODO2: 43071
 - response: |-
     660F1100B62D10D0000
-    660F121A9700000A970
+    660F121AA800000AA80
   expected_values:
-    MINI_ODO1: 43376
-    MINI_ODO2: 43376
+    MINI_ODO1: 43648
+    MINI_ODO2: 43648
